Symptom Chip inflation and validation refactored in New Patient Screen

--- a/app/src/main/res/layout/activity_new_patient.xml
+++ b/app/src/main/res/layout/activity_new_patient.xml
@@ -122,100 +122,101 @@
             android:textStyle="bold" />
 
         <com.google.android.material.chip.ChipGroup
+            android:id="@+id/chipGroup_symptoms"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="8dp">
 
-            <com.google.android.material.chip.Chip
-                android:id="@+id/chip_fever"
-                style="@style/Widget.MaterialComponents.Chip.Filter"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/symptom_fever" />
+<!--            <com.google.android.material.chip.Chip-->
+<!--                android:id="@+id/chip_fever"-->
+<!--                style="@style/Widget.MaterialComponents.Chip.Filter"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:text="@string/symptom_fever" />-->
 
-            <com.google.android.material.chip.Chip
-                android:id="@+id/chip_fatigue"
-                style="@style/Widget.MaterialComponents.Chip.Filter"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/symptom_fatigue" />
+<!--            <com.google.android.material.chip.Chip-->
+<!--                android:id="@+id/chip_fatigue"-->
+<!--                style="@style/Widget.MaterialComponents.Chip.Filter"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:text="@string/symptom_fatigue" />-->
 
-            <com.google.android.material.chip.Chip
-                android:id="@+id/chip_dry_cough"
-                style="@style/Widget.MaterialComponents.Chip.Filter"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/symptom_dry_cough" />
+<!--            <com.google.android.material.chip.Chip-->
+<!--                android:id="@+id/chip_dry_cough"-->
+<!--                style="@style/Widget.MaterialComponents.Chip.Filter"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:text="@string/symptom_dry_cough" />-->
 
-            <com.google.android.material.chip.Chip
-                android:id="@+id/chip_aches_and_pains"
-                style="@style/Widget.MaterialComponents.Chip.Filter"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/symptom_aches_and_pains" />
+<!--            <com.google.android.material.chip.Chip-->
+<!--                android:id="@+id/chip_aches_and_pains"-->
+<!--                style="@style/Widget.MaterialComponents.Chip.Filter"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:text="@string/symptom_aches_and_pains" />-->
 
-            <com.google.android.material.chip.Chip
-                android:id="@+id/chip_sore_throat"
-                style="@style/Widget.MaterialComponents.Chip.Filter"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/symptom_sore_throat" />
+<!--            <com.google.android.material.chip.Chip-->
+<!--                android:id="@+id/chip_sore_throat"-->
+<!--                style="@style/Widget.MaterialComponents.Chip.Filter"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:text="@string/symptom_sore_throat" />-->
 
-            <com.google.android.material.chip.Chip
-                android:id="@+id/chip_nasal_congestion"
-                style="@style/Widget.MaterialComponents.Chip.Filter"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/symptom_nasal_congestion" />
+<!--            <com.google.android.material.chip.Chip-->
+<!--                android:id="@+id/chip_nasal_congestion"-->
+<!--                style="@style/Widget.MaterialComponents.Chip.Filter"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:text="@string/symptom_nasal_congestion" />-->
 
-            <com.google.android.material.chip.Chip
-                android:id="@+id/chip_runny_nose"
-                style="@style/Widget.MaterialComponents.Chip.Filter"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/symptom_runny_nose" />
+<!--            <com.google.android.material.chip.Chip-->
+<!--                android:id="@+id/chip_runny_nose"-->
+<!--                style="@style/Widget.MaterialComponents.Chip.Filter"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:text="@string/symptom_runny_nose" />-->
 
-            <com.google.android.material.chip.Chip
-                android:id="@+id/chip_diarrhoea"
-                style="@style/Widget.MaterialComponents.Chip.Filter"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/symptom_diarrhoea" />
+<!--            <com.google.android.material.chip.Chip-->
+<!--                android:id="@+id/chip_diarrhoea"-->
+<!--                style="@style/Widget.MaterialComponents.Chip.Filter"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:text="@string/symptom_diarrhoea" />-->
 
-            <com.google.android.material.chip.Chip
-                android:id="@+id/chip_anosmia"
-                style="@style/Widget.MaterialComponents.Chip.Filter"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/symptom_anosmia" />
+<!--            <com.google.android.material.chip.Chip-->
+<!--                android:id="@+id/chip_anosmia"-->
+<!--                style="@style/Widget.MaterialComponents.Chip.Filter"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:text="@string/symptom_anosmia" />-->
 
-            <com.google.android.material.chip.Chip
-                android:id="@+id/chip_rash"
-                style="@style/Widget.MaterialComponents.Chip.Filter"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/symptom_rash" />
+<!--            <com.google.android.material.chip.Chip-->
+<!--                android:id="@+id/chip_rash"-->
+<!--                style="@style/Widget.MaterialComponents.Chip.Filter"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:text="@string/symptom_rash" />-->
 
-            <com.google.android.material.chip.Chip
-                android:id="@+id/chip_conjunctivitis"
-                style="@style/Widget.MaterialComponents.Chip.Filter"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/symptom_conjunctivitis" />
+<!--            <com.google.android.material.chip.Chip-->
+<!--                android:id="@+id/chip_conjunctivitis"-->
+<!--                style="@style/Widget.MaterialComponents.Chip.Filter"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:text="@string/symptom_conjunctivitis" />-->
 
-            <com.google.android.material.chip.Chip
-                android:id="@+id/chip_headache"
-                style="@style/Widget.MaterialComponents.Chip.Filter"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/symptom_headache" />
+<!--            <com.google.android.material.chip.Chip-->
+<!--                android:id="@+id/chip_headache"-->
+<!--                style="@style/Widget.MaterialComponents.Chip.Filter"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:text="@string/symptom_headache" />-->
 
-            <com.google.android.material.chip.Chip
-                android:id="@+id/chip_asymptomatic"
-                style="@style/Widget.MaterialComponents.Chip.Filter"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/symptom_asymptomatic" />
+<!--            <com.google.android.material.chip.Chip-->
+<!--                android:id="@+id/chip_asymptomatic"-->
+<!--                style="@style/Widget.MaterialComponents.Chip.Filter"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:text="@string/symptom_asymptomatic" />-->
         </com.google.android.material.chip.ChipGroup>
 
         <TextView
