--- a/app/src/main/res/layout/empty_screen.xml
+++ b/app/src/main/res/layout/empty_screen.xml
@@ -23,6 +23,7 @@
         style="?android:attr/progressBarStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
         android:layout_marginBottom="256dp"
         android:indeterminate="true"
         android:visibility="visible"
