--- a/app/src/main/res/layout/activity_user_validation_upload.xml
+++ b/app/src/main/res/layout/activity_user_validation_upload.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:text="Upload your ICMR ID"
+        android:text="@string/upload_your_icmr_id"
         android:textAppearance="@style/TextAppearance.AppCompat.Display1"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
@@ -24,7 +24,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:text="We're doing this to ensure that the patient data isn't accessed by the wrong people"
+        android:text="@string/we_re_doing_this_to_ensure_that_the_patient_data_isn_t_accessed_by_the_wrong_people"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView_upload_validation" />
 
@@ -34,7 +34,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:text="Current Status: Unsubmitted"
+        android:text="@string/current_status_unsubmitted"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView5" />
@@ -67,13 +67,15 @@
         android:layout_marginEnd="8dp"
         app:errorEnabled="true"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/progressBar_upload_status">
+        app:layout_constraintTop_toBottomOf="@+id/divider5">
 
         <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="ICMR ID"
+            android:autofillHints="@string/icmr_id"
+            android:hint="@string/icmr_id"
             android:inputType="textShortMessage" />
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -84,10 +86,10 @@
         android:layout_marginTop="16dp"
         android:enabled="false"
         android:onClick="onSubmitValidationInfoButtonClicked"
-        android:text="Submit Validation Info"
+        android:text="@string/submit_validation_info"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageButton6" />
+        app:layout_constraintTop_toBottomOf="@+id/textField_ICMR_ID" />
 
     <TextView
         android:id="@+id/textView_validation_rejection_reason"
@@ -95,33 +97,57 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:text="TextView"
         android:textStyle="bold"
         android:visibility="gone"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView_validation_status" />
 
-    <ImageButton
-        android:id="@+id/imageButton6"
+    <Button
+        android:id="@+id/button6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="128dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginStart="64dp"
+        android:layout_marginTop="8dp"
         android:onClick="onTakeIDImageButtonClicked"
+        android:text="@string/camera"
+        app:icon="@drawable/ic_baseline_camera_alt_24"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textField_ICMR_ID"
-        app:srcCompat="@drawable/ic_baseline_camera_alt_24" />
+        app:layout_constraintTop_toBottomOf="@+id/textView7" />
 
-    <ImageButton
-        android:id="@+id/imageButton7"
-        style="@style/Widget.AppCompat.ImageButton"
+    <Button
+        android:id="@+id/button7"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="128dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="64dp"
         android:onClick="onSelectIDImageButtonClicked"
+        android:text="@string/gallery"
+        app:icon="@drawable/ic_baseline_photo_album_24"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textField_ICMR_ID"
-        app:srcCompat="@drawable/ic_baseline_photo_album_24" />
+        app:layout_constraintStart_toEndOf="@+id/button6"
+        app:layout_constraintTop_toBottomOf="@+id/textView7" />
+
+    <TextView
+        android:id="@+id/textView7"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:text="@string/please_upload_a_supporting_id_card_image"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/divider4" />
+
+    <View
+        android:id="@+id/divider5"
+        android:layout_width="match_parent"
+        android:layout_height="3dp"
+        android:layout_marginTop="8dp"
+        android:background="?android:attr/listDivider"
+        app:layout_constraintTop_toBottomOf="@+id/button6"
+        tools:layout_editor_absoluteX="1dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
